Formatting our various installation guides
Will follow with updating the content